[25] JEP 507 handling of preview flag
+ set preview flag in classfile for case from JDK-8348410
+ raise preview warning in more cases

Fixes https://github.com/eclipse-jdt/eclipse.jdt.core/issues/4254